# Self-driving-bicycle-2025-2026

./: README.md
docs/: index.md
docs/assets/: how-to-start.md  placeholder.md  summary.md
docs/balance/: hardware_implementation.md  index.md
docs/communication/: index.md
docs/drive/: index.md
docs/steering/: index.md
src/balance/3D_files/: Bottom_cage.stl  Esc_bracket.f3d  Imu_bracket.f3d  Top_cage.stl
src/balance/3D_files/Bracket/: Bracket_cage(29mm).stl  Bracket_cage(30mm).stl  Bracket_cage(31mm).stl  Bracket_cage(32mm).stl
src/balance/lqr/: lqr.ino
src/balance/lqr_espNOW_final/: LQR_Balans_Contoller.ino
src/balance/pid/: pid.ino
src/balance/simulatie/: CMakeLists.txt  README.md  main.cpp  pid.cpp  pid.h  resource.h
